[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "np_ringbuffer"
authors = [{name = "See Leung", email = "sleung852@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

keywords = ["ringbuffer", "timeseries", "numpy"]
dependencies = [
    "numpy",
]
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/sleung852/np_ringbuffer"

